--- a/dev-chulbuji/devops_k8s/demo/values-eks.yaml
+++ b/dev-chulbuji/devops_k8s/demo/values-eks.yaml
@@ -1,7 +1,7 @@
 replicas: 1
 image:
-  repository: 552661052297.dkr.ecr.ap-northeast-2.amazonaws.com/demo
-  tag: 1.2.6
+  repository: 765606275717.dkr.ecr.ap-northeast-1.amazonaws.com/bsw-repo
+  tag: latest
   imagePullSecrets:
     - name: ecr-cred
 service:
